--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
- <meta http-equiv="Content-Language" content="fr" />
+ <meta http-equiv="Content-Language" content="eg" />
  <meta name="author" content="Marc Glisse" />
  <title>
-  Squelette
+exact
  </title>
 </head>
 <body>
