ajout du fichier javascript

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@ exact
 Allez dans <code>Fichier&rarr;Enregistrer sous</code>, pour t&eacute;l&eacute;charger ce fichier.
 </p>
 <hr />
+<script src="main.js"></script>
 </body>
 </html>
